@@ -1,6 +1,8 @@
 Version 2.2
 -----------
 * Post DiFX-2.1
+pcList.pl:	properly treat case where FITS file has been created from
+input files having different base names
 
 Version 2.1
 -----------
